# odysseus-v2

./: .gitignore  README.md  start.sh
app/: package-lock.json  package.json  tsconfig.json
app/src/: brain-bridge.ts  llm-client.ts  llm.ts  main.ts  types.ts  wizard.tsx
app/src/api/: server.ts
app/src/cortex/: lobe.ts
app/src/cortex-left/: index.ts
app/src/cortex-right/: index.ts
app/src/frontal-orchestrator/: index.ts
app/src/sensory/: channel.ts
app/src/temporal-llm/: index.ts
app/src/tui/: app.tsx
core/: Cargo.toml
core/crates/amygdala/: Cargo.toml
core/crates/amygdala/src/: lib.rs
core/crates/astrocyte/: Cargo.toml
core/crates/astrocyte/src/: lib.rs
core/crates/basal/: Cargo.toml
core/crates/basal/src/: lib.rs
core/crates/cerebellum/: Cargo.toml
core/crates/cerebellum/src/: lib.rs
core/crates/hippocampus/: Cargo.toml
core/crates/hippocampus/src/: lib.rs
core/crates/neurons/: Cargo.toml
core/crates/neurons/src/: lib.rs
core/crates/signal_types/: Cargo.toml
core/crates/signal_types/src/: lib.rs  signals.rs  synapse.rs
core/crates/sparse_matrix/: Cargo.toml
core/crates/sparse_matrix/src/: lib.rs
neural/: README.md  mix.exs
neural/apps/odysseus_amygdala/: .gitignore  README.md  mix.exs
neural/apps/odysseus_astrocyte/: .gitignore  README.md  mix.exs
neural/apps/odysseus_basal/: .gitignore  README.md  mix.exs
neural/apps/odysseus_brain/: .gitignore  README.md  mix.exs
neural/apps/odysseus_cerebellum/: .gitignore  README.md  mix.exs
neural/apps/odysseus_frontal_left/: mix.exs
(+63 files in other folders)
