[workspace]
resolver = "2"
members = [
    "crates/signal_types",
    "crates/sparse_matrix",
    "crates/neurons",
    "crates/hippocampus",
    "crates/amygdala",
    "crates/basal",
    "crates/cerebellum",
    "crates/astrocyte",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
rustler = "0.36"
