[package]
name = "odysseus_hippocampus"
version.workspace = true
edition.workspace = true

[lib]
name = "odysseus_hippocampus"
crate-type = ["cdylib", "rlib"]

[dependencies]
signal_types = { path = "../signal_types" }
sparse_matrix = { path = "../sparse_matrix" }
rustler = { workspace = true }
serde = { workspace = true }
